[gd_scene load_steps=5 format=2]

[ext_resource path="res://_tri_char_codex/components/AchievementPopup.gd" type="Script" id=1]
[ext_resource path="res://_tri_char_codex/components/Rectangle.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://sound/ui/multiplayer_fight_start.wav" type="AudioStream" id=4]

[node name="CodexAchievementPopup" type="CanvasLayer"]
layer = 32
script = ExtResource( 1 )

[node name="AchievementSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 4 )

[node name="AchievementHolder" type="Control" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -187.0
margin_top = -50.0
margin_right = 187.0
margin_bottom = -8.0
rect_clip_content = true
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 2 )
fill_color = Color( 0, 0, 0, 0.501961 )
line_color = Color( 0.25098, 0.25098, 0.25098, 1 )

[node name="IconHolder" type="Control" parent="AchievementHolder"]
unique_name_in_owner = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 4.0
margin_top = -18.0
margin_right = 40.0
margin_bottom = 18.0
rect_clip_content = true
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}
line_color = Color( 0.25, 0.25, 0.25, 1 )

[node name="AchievementIcon" type="TextureRect" parent="AchievementHolder/IconHolder"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="AchievementGet" type="RichTextLabel" parent="AchievementHolder"]
unique_name_in_owner = true
anchor_right = 1.0
margin_left = 44.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 13.0
mouse_filter = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "ACHIEVEMENT GET"

[node name="AchievementName" type="RichTextLabel" parent="AchievementHolder"]
unique_name_in_owner = true
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 44.0
margin_top = 12.0
margin_right = 22.0
margin_bottom = 6.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Name Here"
